[gd_scene load_steps=18 format=2]

[ext_resource path="res://Hazards/Cannon.gd" type="Script" id=1]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/1.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/2.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/5.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/6.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Idle/1.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/4.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/3.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/2.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/4.png" type="Texture" id=10]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/6.png" type="Texture" id=11]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/3.png" type="Texture" id=12]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/1.png" type="Texture" id=13]
[ext_resource path="res://Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/5.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 13 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 11 ), null ],
"loop": false,
"name": "fire_effect",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.204, 11.2097 )

[node name="Cannon" type="Node2D"]
script = ExtResource( 1 )

[node name="CannonSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -19.23, -0.375 )
rotation = 1.5708
enabled = true
collision_mask = 3

[node name="FireEffect" type="AnimatedSprite" parent="."]
position = Vector2( -25.4712, -2.24746 )
frames = SubResource( 2 )
animation = "fire_effect"
frame = 7
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.187286, 1.49831 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="CannonSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="CannonSprite" to="." method="_on_CannonSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
